<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.start.StartFragment">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="200dp"
        android:gravity="center"
        android:text="@string/Welcome"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/readyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/Ready"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/welcomeText"
        app:layout_constraintStart_toStartOf="@+id/welcomeText"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="90dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/roboto_bold"
        android:paddingVertical="10dp"
        android:text="@string/Start"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:cornerRadius="13dp"
        app:layout_constraintEnd_toEndOf="@+id/readyText"
        app:layout_constraintStart_toStartOf="@+id/readyText"
        app:layout_constraintTop_toBottomOf="@+id/readyText" />

</androidx.constraintlayout.widget.ConstraintLayout>